--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qual
                   </div>
                 <!--Google map-->
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                    <iframe src="https://maps.google.com/maps?width=800&amp;height=600&amp;hl=en&amp;q=Av.%20Fagundes%20de%20Oliveira%2C%202023+(M3%20Balan%C3%A7as)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0"
+                    <iframe src="https://maps.google.com/maps?width=800&amp;height=600&amp;hl=pt-br&amp;q=Av.%20Fagundes%20de%20Oliveira%2C%202023+(M3%20Balan%C3%A7as)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0"
                     style="border:0" allowfullscreen></iframe>
                 </div>
                 <!--Google Maps-->
@@ -364,7 +364,7 @@ Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qual
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - website by rochas@gmail.com</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - Todos os Direitos Reservados - As marcas aqui citadas, assim como suas logomarcas, são responsáveis e detentodas de todos os direitos assegurados por lei. Google Maps é uma empresa do Google S.A</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
