--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qual
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - Todos os Direitos Reservados - As marcas aqui citadas, assim como suas logomarcas, são responsáveis e detentodas de todos os direitos assegurados por lei. Google Maps é uma empresa do Google S.A</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - Todos os Direitos Reservados - As marcas aqui citadas, assim como suas logomarcas, são responsáveis e detentodas de todos os direitos assegurados por lei. Google Maps é uma empresa do Google LLC - <a href="https://www.google.com/intl/pt-BR_US/help/terms_maps/">Licença de uso</a>a></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
