--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/balmak.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50"></div>
                                 <div class="project-name">Balmak</div>
