--- a/index.html
+++ b/index.html
@@ -178,11 +178,13 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="#">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/digitron.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50"></div>
                                 <div class="project-name">Digitron</div>
                             </div>
+                        </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
