--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qual
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Endereço: Av. Fagundes de Oliveira, 2023 – Vila São José - Diadema / SP&nbsp;&nbsp;&nbsp;&nbsp;09950-300</p>
+                        <p class="text-muted mb-5">Endereço: Avenida Fagundes de Oliveira, 2023 <br> Vila São José - Diadema / SP - 09950-300</p>
                         <hr class="divider my-4" />
                     </div>
                 </div>
@@ -351,7 +351,7 @@ Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qual
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <p><br/>* De segunda à sexta-feira das 8:00 as 17:00<br/></p>
+                    <p><br/>* De segunda à sexta-feira das 8:00h as 17:00h *<br/></p>
                   </div>
                 <!--Google map-->
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
