--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption">
@@ -195,7 +195,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>                    
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -204,7 +204,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -213,7 +213,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -222,7 +222,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -231,7 +231,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -240,7 +240,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -249,7 +249,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -258,7 +258,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" style="display: none;">
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
