--- a/index.html
+++ b/index.html
@@ -281,8 +281,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         
                <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">A M3 Balanças tem como compromisso atender os requisitos da norma e a satisfação do cliente buscando a melhoria contínua do sistema de gestão da qualidade.
-Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, propiciando o melhor serviço e a plena satisfação dos nossos clientes.
+                        <p class="text-white-75 font-weight-light mb-5">A M3 Balanças tem como compromisso atender os requisitos aplicáveis, buscando a melhoria contínua do sistema de gestão da qualidade. Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, proporcionando o melhor serviço e a plena satisfação dos nossos clientes.
 </p>
                     </div>
                 </div>
@@ -293,7 +292,7 @@ Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qual
                                 <div class="mt-5">
                                     <i class="fas fa-4x fa-file-signature text-primary mb-4"></i>
                                     <h3 class="h4 mb-2">Missão</h3>
-                                    <p class="text-muted mb-0">Fornecer serviços de manutenção e calibração em balanças prestando atendimento com eficiência, segurança e excelência gerando melhores resultados financeiros aos seus clientes.</p>
+                                    <p class="text-muted mb-0">Fornecer serviços de manutenção e calibração em balanças com eficiência, segurança e excelência, proporcionando confiabilidade aos processos de nossos clientes.</p>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 text-center">
