--- a/index.html
+++ b/index.html
@@ -322,8 +322,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <h2 class="text-center mt-0">Política da Qualidade</h2>
                          <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
-                                <hr class="divider my-8" />
-                                    <p class="text-muted mb-8">A M3 Balanças fornece serviços de manutenção e calibração em balanças, tendo como compromisso atender os requisitos da norma e a satisfação do cliente buscando a melhoria contínua do sistema de gestão da qualidade.</p>                                                           
+<br/>                                    <p class="text-muted mb-8">A M3 Balanças fornece serviços de manutenção e calibração em balanças, tendo como compromisso atender os requisitos da norma e a satisfação do cliente buscando a melhoria contínua do sistema de gestão da qualidade.</p>                                                           
                                 <hr class="divider my-8" />
                             </div>
                          </div>
