--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/fizola.png" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50"></div>
-                                <div class="project-name">Welmy</div>
+                                <div class="project-name">Fizola</div>
                             </div>
                         </a>
                     </div> 
