--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <div class="mt-5">
                             <i class="fas fa-4x fa-balance-scale text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Aferição com Ajuste</h3>
-                            <p class="text-muted mb-0">Realizamos a calibração e ajuste do equipamento de pesagem, com utilização de pesos padrão.</p>
+                            <p class="text-muted mb-0">Realizamos a aferição e ajuste do equipamento de pesagem, com utilização de pesos padrão.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
