--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                     </div>
               
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/thumbnails/fizola.png">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/fizola.png" alt="" />
+                        <a class="portfolio-box" href="assets/img/portfolio/thumbnails/filizola.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/filizola.png" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50"></div>
-                                <div class="project-name">Fizola</div>
+                                <div class="project-name">Filizola</div>
                             </div>
                         </a>
                     </div> 
