--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762</div>
+                        <div>(11) 4075-4988<br/>(11) 4071-1037</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
