--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                          <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
                                 <hr class="divider my-8" />
-                                    <p class="text-muted mb-8"><a href="/assets/CertificadoIQNET.pdf" target="_blank">Certificado IQNET</a> | <a href="/assets/CertificadoISO.pdf" target="_blank">Certificado ISO</a> | <a href="/assets/Autorizacao2021.pdf" target="_blank">Autorização INMETRO / IPEM</a></p>
+                                    <p class="text-muted mb-8"><a href="/assets/CertificadoIQNET.pdf" target="_blank">Certificado IQNET</a> | <a href="/assets/CertificadoISO.pdf" target="_blank">Certificado ISO9001</a> | <a href="/assets/Autorizacao2021.pdf" target="_blank">Autorização INMETRO / IPEM</a></p>
                                 <hr class="divider my-8" />
                             </div>
                          </div>
