--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/thumbnails/saturno.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/saturno.jpg" alt="" />
+                        <a class="portfolio-box" href="assets/img/portfolio/thumbnails/micheletti.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/micheletti.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50"></div>
-                                <div class="project-name">Saturno</div>
+                                <div class="project-name">Micheletti</div>
                             </div>
                         </a>
                     </div>
