--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Serviços de manutenção e calibração em Balanças </h1>
+                        <h1 class="text-uppercase font-weight-bold">Serviços de manutenção e calibração em Balanças </h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Com mais de 20 anos de experiência em manutenção e calibração de balanças.<br>
+                        <p class="text-black-75 font-weight-light mb-5">Com mais de 20 anos de experiência em manutenção e calibração de balanças.<br>
                             Certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, propiciando o melhor serviço e a plena satisfação dos nossos clientes.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Saiba Mais</a>
                     </div>
@@ -59,9 +59,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">História</h2>
+                        <h2 class="text-black mt-0">História</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 20 anos de experiência em manutenção e calibração de balanças.<br/><br/>
+                        <p class="text-black-50 mb-4">A M3 Balanças é uma empresa com mais de 20 anos de experiência em manutenção e calibração de balanças.<br/><br/>
 Surgiu do desejo de prestar um atendimento personalizado às empresas de diversos segmentos, sejam estas, comércios ou indústrias.<br/><br/>
 Atendemos comércios como padarias, pizzarias, mercados, açougues, restaurantes, academias, hospitais, ferro velhos, feirantes, bares e indústrias químicas, têxteis, alimentícias, metalúrgicas, cosméticas, farmacêuticas e autopeças.<br/><br/>
 Com uma estrutura adequada ao tipo de serviço que se dispõe a realizar e junto dos seus colaboradores, que são altamente treinados e capacitados, planejam as ações para que seus clientes atinjam seus objetivos com a máxima qualidade.<br/><br/>
@@ -127,7 +127,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balmak.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balmak.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Balmak</div>
                             </div>
                         </a>
@@ -136,7 +136,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/micheletti.png">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/micheletti.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Micheletti</div>
                             </div>
                         </a>
@@ -146,7 +146,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/balancaantiga.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/balancaantiga.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Toledo</div>
                             </div>
                         </a>
@@ -156,7 +156,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/triunfo.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/triunfo.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Triunfo</div>
                             </div>
                         </a>
@@ -165,7 +165,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/ramuza.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/ramuza.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Ramuza</div>
                             </div>
                         </a>
@@ -174,7 +174,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/marte.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/marte.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Marte</div>
                             </div>
                         </a>
@@ -183,7 +183,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/digitron.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/digitron.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Digitron</div>
                             </div>
                         </a>
@@ -192,7 +192,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/welmy.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/welmy.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Welmy</div>
                             </div>
                         </a>
@@ -202,7 +202,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         <a class="portfolio-box" href="assets/img/portfolio/thumbnails/filizola.png">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/filizola.png" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50"></div>
+                                <div class="project-category text-black-50"></div>
                                 <div class="project-name">Filizola</div>
                             </div>
                         </a>
@@ -276,13 +276,13 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
             </div>
         </div>
                 <!-- Quality -->
-                <section class="page-section bg-dark text-white" id="quality">
+                <section class="page-section bg-dark text-black" id="quality">
                     <div class="container">
                         <h2 class="text-center mt-0">Qualidade</h2>
                         
                <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">A M3 Balanças tem como compromisso atender os requisitos aplicáveis, buscando a melhoria contínua do sistema de gestão da qualidade. Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, proporcionando o melhor serviço e a plena satisfação dos nossos clientes.
+                        <p class="text-black-75 font-weight-light mb-5">A M3 Balanças tem como compromisso atender os requisitos aplicáveis, buscando a melhoria contínua do sistema de gestão da qualidade. Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, proporcionando o melhor serviço e a plena satisfação dos nossos clientes.
 </p>
                     </div>
                 </div>
