--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="text-black mt-0">História</h2>
-                        <hr class="divider light my-4" />
+                        <hr class="divider my-4" />
                         <p class="text-black-50 mb-4">A M3 Balanças é uma empresa com mais de 20 anos de experiência em manutenção e calibração de balanças.<br/><br/>
 Surgiu do desejo de prestar um atendimento personalizado às empresas de diversos segmentos, sejam estas, comércios ou indústrias.<br/><br/>
 Atendemos comércios como padarias, pizzarias, mercados, açougues, restaurantes, academias, hospitais, ferro velhos, feirantes, bares e indústrias químicas, têxteis, alimentícias, metalúrgicas, cosméticas, farmacêuticas e autopeças.<br/><br/>
